k8s/namespace-ingress-nginx.yaml
# Create ingress-nginx namespace
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
