k8s/django-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-backend
  namespace: kairos
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-backend
  template:
    metadata:
      labels:
        app: django-backend
    spec:
      containers:
      - name: django-backend
        image: your-django-image:latest
        ports:
        - containerPort: 8000
