k8s/react-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend
  namespace: kairos
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-frontend
  template:
    metadata:
      labels:
        app: react-frontend
    spec:
      containers:
      - name: react-frontend
        image: sellinios/react-app:latest
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: my-registry-key
