k8s/django-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-backend
  namespace: kairos
spec:
  type: ClusterIP
  selector:
    app: django-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
