k8s/nginx-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 32688
  - name: https
    port: 443
    targetPort: 443
    nodePort: 31137
  selector:
    app.kubernetes.io/name: ingress-nginx
