k8s/react-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend
  namespace: kairos
spec:
  type: LoadBalancer
  selector:
    app: react-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
