k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kairos-ingress
  namespace: kairos
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
  - hosts:
    - kairos.gr
    secretName: kairos-tls
  rules:
  - host: kairos.gr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-frontend
            port:
              number: 3000
      - path: /.well-known/acme-challenge/
        pathType: Prefix
        backend:
          service:
            name: cert-manager-webhook
            port:
              number: 8089
