k8s/validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: ingress-nginx-admission
webhooks:
- name: validate.nginx.ingress.kubernetes.io
  clientConfig:
    service:
      name: ingress-nginx-controller-admission
      namespace: ingress-nginx
      path: /networking/v1/ingresses
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURTVENDQWpHZ0F3SUJBZ0lVQStsb2k1Q3RDdmZiTGhCQ0VTWGRJSkJ4SzNzd0RRWUpLb1pJaHZjTkFRRUwKQlFBd05ERXlNREFHQTFVRUF3d3BhVzVuY21WemN5MXVaMmx1ZUMxaFpHMXBjM05wYjI0dWFXNW5jbVZ6Y3kxdQpaMmx1ZUM1emRtTXdIaGNOTWpRd056QTJNRFF5TnpVeldoY05NalV3TnpBMk1EUXlOelV6V2pBME1USXdNQVlEClZRUUREQ2xwYm1keVpYTnpMVzVuYVc1NExXRmtiV2x6YzJsdmJpNXBibWR5WlhOekxXNW5hVzU0TG5OMll6Q0MKQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFMa3Q0Ymt0blFIMlZoQk55UUxTdTFwcApCdHcydm9BK3RDcT [...]
  admissionReviewVersions: ["v1", "v1beta1"]
  failurePolicy: Fail
  rules:
  - apiGroups: ["networking.k8s.io"]
    apiVersions: ["v1"]
    operations: ["CREATE", "UPDATE"]
    resources: ["ingresses"]
  sideEffects: None
